--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,10 +11,10 @@ body {
   font-family: system-ui;
   color: white;
   text-shadow: 1px 1px 1px black;
-  animation: 300ms latido infinite;
+  /* animation: 300ms latido infinite; */
 }
 
-@keyframes latido {
+/* @keyframes latido {
   0% {
     transform: scale(1.1)
   }
@@ -24,4 +24,4 @@ body {
   100% {
     transform: scale(1.1)
   }
-} 
+}  */
